May 1 2024(2)
Added:
 the first scene

Changed:
 the items are now split between interactable and collectable
 they are not combined into one type

 names and descriptions are now held in an array
 index into the array by the lore field on the item
-----------------------------------------------------------------------------------------
May 1 2024
Added:
the start of changing how items work
-----------------------------------------------------------------------------------------
April 29 2024
Added:
 get_collect_index() to GameState
 same function as get_inter_index()
 store field to GameState
 if store false it cannot push to inventory

 some comments
-----------------------------------------------------------------------------------------
April 28 2024(2)
Added:
 item_interactions file
 item_interaction() goes through all the interactions
 the player can have with an item in a room

 get_inter_index() to GameState
 it calls get_inter_index() on room
 and returns the index at that an interactable item is at
 
 Changed:
 Room interactable_items field to hold the tuple (String, Interactable)

 Removed:
 interactable_items
-----------------------------------------------------------------------------------------
April 28 2024
Version 0.0.1
Added:
 pickup_item() to GameState
 it calls get_item() whitch calls choose_item()
 this the ability to pickup items
-----------------------------------------------------------------------------------------
April 27 2024
Version 0.0.1
Added:
 id field to item structs

 get_desc_id() returns the items id

 change_desc_id() to all item structs

 scene folder
 I plan to hold all the scripted scenes in it

 area folder to lib
 area has the Area struct that will contain the different areas
 and what they hold

 current_area, previous_area, and all_areas as fields to GameState
 current_area stores the current area
 previous_area will store the previous areas
 all_areas hold all the different areas in the game

 update_area to GameState